[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/pause.gd" type="Script" id=1]

[node name="Pause" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0.294118 )
self_modulate = Color( 0.278431, 0.333333, 0.462745, 1 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ContinueButton" type="Button" parent="."]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -34.5
margin_top = -10.0
margin_right = 34.5
margin_bottom = 10.0
rect_scale = Vector2( 1.5, 1.5 )
text = "Continue"
flat = true

[node name="QuitButton" type="Button" parent="."]
pause_mode = 2
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -91.0
margin_top = -54.0
margin_right = -51.0
margin_bottom = -34.0
rect_scale = Vector2( 1.5, 1.5 )
text = "Quit"
flat = true

[node name="FullScreenButton" type="Button" parent="."]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -41.0
margin_top = -44.0
margin_right = 37.0
margin_bottom = -24.0
rect_scale = Vector2( 1.5, 1.5 )
text = "FullScreen"
flat = true

[connection signal="pressed" from="ContinueButton" to="." method="_on_ContinueButton_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="FullScreenButton" to="." method="_on_FullScreenButton_pressed"]
